frontend/test/should_fail/exectype_AssignAttributeToVar.grg
using exectype;

rule r
{
	modify  {
		exec(x:int=varia ;> f:foo=x.f); // only node/edge type allows attribute access
	}
}